[BUGFIX] Align search bar and acount menu to the right in mobile view

--- a/fileadmin/templates/styles/less/visay-info.less
+++ b/fileadmin/templates/styles/less/visay-info.less
@@ -71,7 +71,7 @@ footer {
 }
 
 .navbar-inverse .navbar-search {
-	margin-right: 20px;
+	margin-right: 5px;
 }
 
 .navbar-inverse .navbar-search .search-query {
